fix: ensure homepage works in dark mode"

--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -81,7 +81,7 @@
     }
 
     &--beige {
-      background-color: var(--magentaa11y-color-brand-grayscale-200);
+      background-color: var(--color-background-secondary);
     }
 
     @media (max-width: 768px) {
